fix session error

--- a/src/app/components/admin-home/admin-home.component.html
+++ b/src/app/components/admin-home/admin-home.component.html
@@ -1,5 +1,5 @@
 <app-navbar *ngIf="idUser!=null && is_admin=='ADMIN'"></app-navbar>
-
+<div style="position: relative;top: 58px;">
 <div *ngIf="!hideLog || !hide || Sup" class="backgroundBody">
 
 </div>
@@ -217,3 +217,5 @@
 
 
 <div style="height: 20px;"></div>
+
+</div>
