--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,5 +1,6 @@
 <app-navbar *ngIf="idUser!=null && is_admin=='ADMIN'"></app-navbar>
 
+<div style="position: relative;top: 58px;">
 <div *ngIf="!hideAdd" class="popup">
     <button class="btnCancel" (click)="add()">X</button>
     <br>
@@ -175,4 +176,5 @@
 </div>
 
 
+</div>
 </div>
