--- a/src/app/components/admin-home/admin-home.component.css
+++ b/src/app/components/admin-home/admin-home.component.css
@@ -60,7 +60,7 @@ mat-table{
 }
 
 .detail{
-    z-index: 1;
+    z-index: 2;
     position: fixed;
     right: 50%;
     left: 50%;
@@ -105,13 +105,15 @@ mat-table{
     top: 3px;
 }
 
-#loading{
-    position: absolute;
-    right: 50%;
-    left: 50%;
-    top: 30%;
-    transform: translate(-50%,-50%);
-}
+@media only screen and (min-width: 481px) {
+    #loading{
+        position: absolute;
+        right: 50%;
+        left: 50%;
+        top: 130%;
+        transform: translate(-50%,-50%);
+    }
+}   
 
 
 
@@ -151,7 +153,7 @@ table, th, td {
     
     }
     .detail{
-        z-index: 1;
+        z-index: 2;
         position: fixed;
         right: 50%;
         left: 50%;
@@ -189,6 +191,14 @@ table, th, td {
     }
     .mat-column-dateModification {
         flex: 0 0 13%;
+    }
+
+    #loading{
+        position: absolute;
+        right: 50%;
+        left: 50%;
+        top: 100%;
+        transform: translate(-50%,-50%);
     }
     
 }
