--- a/src/app/components/produit/produit.component.html
+++ b/src/app/components/produit/produit.component.html
@@ -1,6 +1,6 @@
 <app-navbar *ngIf="idUser!=null && is_admin=='ADMIN'"></app-navbar>
 
-
+<div style="position: relative;top: 58px;">
 <div *ngIf="!hideAdd" class="popup">
   <button class="btnCancel" (click)="add()">X</button>
   <br>
@@ -105,5 +105,7 @@
       
   </div>
 
+
+</div>
 
 </div>
