--- a/src/app/components/reference/reference.component.html
+++ b/src/app/components/reference/reference.component.html
@@ -1,5 +1,7 @@
 <app-navbar *ngIf="idUser!=null && is_admin=='ADMIN'"></app-navbar>
 
+
+<div style="position: relative;top: 58px;">
 <div *ngIf="!hideAdd" class="popup">
   <button class="btnCancel" (click)="add()">X</button>
   <br>
@@ -105,5 +107,7 @@
     
 </div>
 
+
+</div>
 
 </div>
