--- a/src/app/components/test/test.component.css
+++ b/src/app/components/test/test.component.css
@@ -21,7 +21,7 @@ mat-table{
 }
 
 .detail{
-    z-index: 1;
+    z-index: 2;
     position: fixed;
     right: 50%;
     left: 50%;
@@ -81,7 +81,7 @@ mat-table{
     }
     
     .detail{
-        z-index: 1;
+        z-index: 2;
         position: fixed;
         right: 50%;
         left: 50%;
@@ -103,18 +103,33 @@ mat-table{
     .mat-column-dateModification {
         flex: 0 0 12%;
     }
+
+    #loading{
+        position: absolute;
+        right: 50%;
+        left: 50%;
+        top: 100%;
+        transform: translate(-50%,-50%);
+    }
+    
+    .btnExport{
+        position: relative;right: -20px;
+    }
+}
+
+
+@media only screen and (min-width: 481px) {
+    #loading{
+        position: absolute;
+        right: 50%;
+        left: 50%;
+        top: 130%;
+        transform: translate(-50%,-50%);
+    }
     
 }
 
 
-
-#loading{
-    position: absolute;
-    right: 50%;
-    left: 50%;
-    top: 60%;
-    transform: translate(-50%,-50%);
-}
 
 .reload{
     position: relative;
