--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -1,5 +1,6 @@
 <app-navbar *ngIf="idUser!=null && is_admin=='ADMIN'"></app-navbar>
 
+<div style="position: relative;top: 58px;">
 <div *ngIf="!hideAdd" class="popup">
   <button class="btnCancel" (click)="add()">X</button>
   <br>
@@ -275,3 +276,5 @@
 
 
 <div style="height: 20px;"></div>
+
+</div>
