--- a/src/app/components/ville/ville.component.html
+++ b/src/app/components/ville/ville.component.html
@@ -1,5 +1,7 @@
 <app-navbar *ngIf="idUser!=null && is_admin=='ADMIN'"></app-navbar>
 
+
+<div style="position: relative;top: 58px;">
 <div *ngIf="idUser!=null && is_admin=='ADMIN'" >
 
    <!--<div *ngIf="hideAdd" class="container py-1"> 
@@ -81,4 +83,4 @@
 
 </div>
 
-
+</div>
