--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -19,6 +19,9 @@
             <li *ngIf="is_admin=='ADMIN'" routerLinkActive="active" routerLink="/todo" class="nav-item active">
                 <a  class="nav-link" href="/todo"><b>toDo</b></a>
             </li>
+            <li *ngIf="is_admin=='ADMIN'" routerLinkActive="active" routerLink="/check" class="nav-item active">
+                <a  class="nav-link" href="/check"><b>Check</b></a>
+            </li>
             <li routerLinkActive="active" routerLink="/journal" class="nav-item active">
                 <a  class="nav-link" href="/journal"><b>Journal</b></a>
             </li>
