--- a/src/app/components/admin-home/admin-home.component.html
+++ b/src/app/components/admin-home/admin-home.component.html
@@ -121,7 +121,7 @@
         <!-- <a style="width: 100px;" class="btn btn-primary" (click)="reload()"><mat-icon>restore_page</mat-icon></a> -->
     </div>
     
-    <div *ngIf="load != 1" class="container col-md-12  table-responsive body" [style]="style">
+    <div  class="container col-md-12  table-responsive body" [style]="style">
         
         
        
