--- a/src/app/components/checkin/checkin.component.html
+++ b/src/app/components/checkin/checkin.component.html
@@ -2,7 +2,49 @@
 
 <div style="position: relative;top: 58px;">
     <div *ngIf="idUser!=null && is_admin=='ADMIN'" class="container py-4">
-        <p>checkin works!</p>
+        <h1>Check-In</h1>
+        <input  class="form-control" #inputField id="filterInput" (keyup)="filter($event.target)" placeholder="Filter">
+        <i *ngIf="searcheIcon" class="fa fa-search" id="filterInputIconeSearche" aria-hidden="true"></i>
+        <i *ngIf="!searcheIcon" style="cursor: pointer;" (click)="clearSearcheInput()" class="fa fa-times-circle" id="filterInputIconeCancel" aria-hidden="true"></i>
+
+        <br>
+        <div  *ngIf="load != 0" id="delete">
+            <img id="loading" src="../../../assets/loading.gif.gif" width="60px" height="60px">
+            
+        </div>
+        <div style="overflow: auto;">
+
+            <mat-table  class="tt" #table matSort  [dataSource]="dataSource" >
+    
+                <ng-container matColumnDef="checkValue">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Etat </mat-header-cell>
+                    <mat-cell *matCellDef="let element" [ngClass]="{'OUT': element.checkValue == 'OUT' ,'IN': element.checkValue == 'IN'}"> <strong>{{element.checkValue}} </strong></mat-cell>
+                </ng-container>
+    
+                <ng-container matColumnDef="user">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Utilisateur </mat-header-cell>
+                    <mat-cell *matCellDef="let element" [ngClass]="{'encours': element.statut == 'en cours' ,'traite': element.statut == 'traité'}" > {{element.user}} </mat-cell>
+                </ng-container>
+    
+                <ng-container matColumnDef="date">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Date </mat-header-cell>
+                    <mat-cell *matCellDef="let element" [ngClass]="{'encours': element.statut == 'en cours' ,'traite': element.statut == 'traité'}"> {{element.date}} </mat-cell>
+                </ng-container>
+    
+                <ng-container matColumnDef="time">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Heure </mat-header-cell>
+                    <mat-cell *matCellDef="let element" [ngClass]="{'encours': element.statut == 'en cours' ,'traite': element.statut == 'traité'}"> {{element.time}} </mat-cell>
+                </ng-container>
+              
+            
+                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+            </mat-table>
+            <mat-paginator #paginator
+            [pageSize]="15"
+            [showFirstLastButtons]="true">
+            </mat-paginator>
+        </div>
     </div>
 
 </div>
