--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -1,6 +1,6 @@
 <app-navbar *ngIf="idUser!=null && is_admin=='ADMIN'"></app-navbar>
 
-<div style="position: relative;top: 58px;">
+<div style="position: relative;top: 58px;overflow: auto;height: -webkit-fill-available;">
 <div *ngIf="!hideAdd" class="popup">
   <button class="btnCancel" (click)="add()">X</button>
   <br>
@@ -275,6 +275,6 @@
 </div>
 
 
-<div style="height: 20px;"></div>
+<div style="height: 75px;"></div>
 
 </div>
