--- a/src/app/components/checkin/checkin.component.html
+++ b/src/app/components/checkin/checkin.component.html
@@ -1,6 +1,6 @@
 <app-navbar *ngIf="idUser!=null && is_admin=='ADMIN'"></app-navbar>
 
-<div style="position: relative;top: 58px;">
+<div style="position: relative;top: 58px;overflow: auto;height: -webkit-fill-available;">
     <div *ngIf="idUser!=null && is_admin=='ADMIN'" class="container py-4">
         <h1>Check-In</h1>
         <input  class="form-control" #inputField id="filterInput" (keyup)="filter($event.target)" placeholder="Filter">
@@ -46,5 +46,5 @@
             </mat-paginator>
         </div>
     </div>
-
+    <div style="height: 75px;"></div>
 </div>
