--- a/src/app/components/journal/journal.component.html
+++ b/src/app/components/journal/journal.component.html
@@ -1,6 +1,6 @@
 <app-navbar *ngIf="idUser!=null "></app-navbar>
 
-<div style="position: relative;top: 58px;">
+<div style="position: relative;top: 58px;overflow: auto;height: -webkit-fill-available;">
 <div *ngIf="!hideAdd && idUser!=null && is_admin!='ADMIN' " class="popup">
   <button class="btnCancel" (click)="add()">X</button>
   <br>
@@ -237,6 +237,6 @@
 </div>
 
 
-<div style="height: 30px;"></div>
+<div style="height: 75px;"></div>
 
 </div>
