--- a/src/app/components/reference/reference.component.html
+++ b/src/app/components/reference/reference.component.html
@@ -1,7 +1,7 @@
 <app-navbar *ngIf="idUser!=null && is_admin=='ADMIN'"></app-navbar>
 
 
-<div style="position: relative;top: 58px;">
+<div style="position: relative;top: 58px;overflow: auto;height: -webkit-fill-available;">
 <div *ngIf="!hideAdd" class="popup">
   <button class="btnCancel" (click)="add()">X</button>
   <br>
@@ -109,5 +109,5 @@
 
 
 </div>
-
+<div style="height: 75px;"></div>
 </div>
