--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,6 +1,6 @@
 <app-navbar *ngIf="idUser!=null && is_admin=='ADMIN'"></app-navbar>
 
-<div style="position: relative;top: 58px;">
+<div style="position: relative;top: 58px;overflow: auto;height: -webkit-fill-available;">
 <div *ngIf="!hideAdd" class="popup">
     <button class="btnCancel" (click)="add()">X</button>
     <br>
@@ -14,41 +14,67 @@
         <form [formGroup]="addUser">
             <div class="col-md">
                 <div class="form-group md-5 py-2">
-                    <label for="username"><b>Username</b></label>
-                    <input [(ngModel)]="userSelected.username" formControlName="username" type="text" name="username" class="form-control" >
-                    <small *ngIf="username.invalid" id="fileHelpId" style="color: red;" class="form-text"> ** </small>
+                    <label for="username"><b>Username</b></label> 
+                    <small id="fileHelpId" style="color: red;" class="form-text"> ** </small>
+                    <input [(ngModel)]="userSelected.username" formControlName="username" type="text" name="username" class="form-control">
+                    
                     
                 </div>
                 <!--{{userSelected | json}}-->
                 <div class="form-group  py-2">
                     <label for="name"><b>Name</b></label>
+                    <small  id="fileHelpId" style="color: red;" class="form-text"> ** </small>
                     <input [(ngModel)]="userSelected.name" formControlName="name" type="text" name="name" class="form-control" >
-                    <small *ngIf="name.invalid" id="fileHelpId" style="color: red;" class="form-text"> ** </small>
+                    
                     
                 </div>
                 <div class="form-group  py-2">
-                    <label for="password"><b>Password</b></label>
+                    <label for="password"><b>Password</b></label> 
+                    <small  id="fileHelpId" style="color: red;" class="form-text"> ** </small>
                     <input [(ngModel)]="userSelected.password" formControlName="password" type="text" name="password" class="form-control" >
-                    <small *ngIf="password.invalid" id="fileHelpId" style="color: red;" class="form-text"> ** </small>
+                   
                     
                 </div>
                 <div class="form-group  py-2">
                     <label for="email"><b>Email</b></label>
+                    <small  id="fileHelpId" style="color: red;" class="form-text"> ** </small>
                     <input [(ngModel)]="userSelected.email" formControlName="email" type="text" name="email" class="form-control" >
-                    <small *ngIf="email.invalid" id="fileHelpId" style="color: red;" class="form-text"> ** </small>
+                    
                     <small class="form-text text-muted">Ex:aa&commat;aa.aa</small><br>
                     
                 </div>
                 <div class="form-group  py-2">
                     <label for="phone"><b>Phone</b></label>
+                    <small  id="fileHelpId" style="color: red;" class="form-text"> ** </small>
                     <input [(ngModel)]="userSelected.phone" formControlName="phone" type="text" name="phone" class="form-control" >
-                    <small *ngIf="phone.invalid" id="fileHelpId" style="color: red;" class="form-text"> ** </small>
+                    
                     
                 </div>
                 <div class="form-group  py-2">
                     <label for="adress"><b>Adresse</b></label>
+                    <small  id="fileHelpId" style="color: red;" class="form-text"> ** </small>
                     <input [(ngModel)]="userSelected.adress" formControlName="adress" type="text" name="adress" class="form-control" >
-                    <small *ngIf="adress.invalid" id="fileHelpId" style="color: red;" class="form-text"> ** </small>
+                    
+                    
+                </div>
+                <div class="form-group py-2">
+                    <label for=""><b>Parcs </b></label>
+                    <small  id="fileHelpId" style="color: red;" class="form-text"> ** </small><br>
+                    <!-- <div class="col-sm-5"> -->
+                        <mat-form-field style="width: 100%;">
+                            <mat-select [(ngModel)]="userSelected.parcs" formControlName="parcs" multiple name="parcs" placeholder="Parcs" >
+                              <mat-option>
+                                <ngx-mat-select-search noEntriesFoundLabel="'Aucun Parc'" placeholderLabel="Cherche" (keyup)="fParcs($event)"></ngx-mat-select-search>
+                              <div class="cancelMatSearche"></div>
+                              </mat-option>
+                              <mat-option *ngFor="let item of parcs" [value]="item.id">
+                                {{item.name}}
+                              </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                        
+<!--                         
+                    </div> -->
                     
                 </div>
                 <div class="form-group py-2">
@@ -152,7 +178,7 @@
         
         <ng-container matColumnDef="mod">
             <mat-header-cell *matHeaderCellDef> Modifier </mat-header-cell>
-            <mat-cell *matCellDef="let element"> <button (click)="add();onMod(element)" class="btn btn-primary" >mod</button> </mat-cell>
+            <mat-cell *matCellDef="let element"> <button (click)="onMod(element)" class="btn btn-primary" >mod</button> </mat-cell>
         </ng-container>
         <ng-container matColumnDef="supp">
             <mat-header-cell *matHeaderCellDef > Supprimer </mat-header-cell>
@@ -177,4 +203,6 @@
 
 
 </div>
+<div style="height: 75px;"></div>
 </div>
+
