--- a/src/app/components/modifier-form/modifier-form.component.html
+++ b/src/app/components/modifier-form/modifier-form.component.html
@@ -1,4 +1,4 @@
-<app-navbar *ngIf="idUser!=null && is_admin!='ADMIN'"></app-navbar>
+<app-navbar *ngIf="idUser!=null "></app-navbar>
 
 <div style="position: relative;top: 58px;overflow: auto;height: -webkit-fill-available;">
 <div *ngIf="idUser!=null " class="container div" >
